--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
-	"name":"zqz",
-	"dependencies": {
-		"node-schedule": "^1.1.0"
-	}
+  "name": "scandeskimg",
+  "version": "1.0.0",
+  "description": "",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "bluebird": "^3.4.7"
+  }
 }
