--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.16.7",
     "mobx": "^3.0.2",
+    "mobx-react": "^4.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
@@ -24,11 +25,14 @@
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-1": "^6.5.0",
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
     "less-loader": "^2.2.3",
+    "react-hot-loader": "^3.0.0-beta.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
